...
      loadGoals();
    }, [loadGoals])
  );

  return (
    <Screen
      title="Learning Goals"
      navigation={navigation}
      headerLeftIcon="chevron-back"
      onHeaderLeftPress={() => navigation.goBack()}
      customEdges={["top", "bottom"]}
      stickyHeader
      useScrollView={false}
...
